--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
   --hover-button-background: #f2f2f2;
 }
 
-.word-counter textarea {
+.word-sum textarea {
   width: 100%;
   min-height: 150px;
   padding: 10px;
@@ -18,18 +18,18 @@
   margin-bottom: 10px;
 }
 
-.word-counter p {
+.word-sum p {
   margin-top: 10px;
 }
 
-.word-counter .button-container {
+.word-sum .button-container {
   display: flex;
   gap: 10px;
   margin-top: 10px;
 }
 
 /* Customize button styles */
-.word-counter button {
+.word-sum button {
   border-radius: 8px;
   border: none;
   padding: 0.6em 1.2em;
@@ -40,32 +40,32 @@
   transition: background-color 0.25s, color 0.25s;
 }
 
-.word-counter button.copy-button {
+.word-sum button.copy-button {
   background-color: var(--copy-button-background);
   color: var(--default-button-color);
 }
 
-.word-counter button.copy-button:hover {
+.word-sum button.copy-button:hover {
   background-color: var(--hover-button-background);
   color: var(--copy-button-background);
 }
 
-.word-counter button.clear-button {
+.word-sum button.clear-button {
   background-color: var(--clear-button-background);
   color: var(--default-button-color);
 }
 
-.word-counter button.clear-button:hover {
+.word-sum button.clear-button:hover {
   background-color: var(--hover-button-background);
   color: var(--clear-button-background);
 }
 
-.word-counter button.copy-clear-button {
+.word-sum button.copy-clear-button {
   background-color: var(--copy-clear-button-background);
   color: var(--default-button-color);
 }
 
-.word-counter button.copy-clear-button:hover {
+.word-sum button.copy-clear-button:hover {
   background-color: var(--hover-button-background);
   color: var(--copy-clear-button-background);
 }
